2025/03/13 home - add redis feature done.